docs: 添加文档说明 & chore: 更新依赖

--- a/.vitepress/theme/custom.css
+++ b/.vitepress/theme/custom.css
@@ -42,7 +42,7 @@
   border-color: var(--c-brand-light);
 }
 .custom-block.tip::before {
-  content: url(/bulb.svg);
+  content: url('/bulb.svg');
 }
 
 .custom-block.warning {
